[tool.poetry]
name = "pyrl"
version = "0.1.0"
description = ""
authors = ["Siddharth Verma <siddharthverma314@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.5.1"
gym = "^0.17.2"
transformers = "^3.0.2"
cpprb = "^9.0.3"
flatten_dict = "^0.3.0"
termcolor = "^1.1.0"
pygments = "^2.6.1"
tabulate = "^0.8.7"
tensorboard = "^2.2.2"

[tool.poetry.dev-dependencies]
python-language-server = "^0.34.1"
pyls-black = "^0.4.4"
ipdb = "^0.13.3"
rope = "^0.17.0"
pyflakes = "^2.2.0"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
